--- a/templates/index3.html
+++ b/templates/index3.html
@@ -10,7 +10,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <title>파일 업로드 예제</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<link rel="stylesheet" href="assets/css/main.css" />
+<link rel="stylesheet" href="static/css/main.css" />
 </head>
 <body class="is-preload">
 
@@ -28,7 +28,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
     <input type="submit" value="업로드">
 </form>
-
 <!-- Footer -->
 <footer id="footer">
 <ul class="icons">
@@ -43,7 +42,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 </footer>
 
 <!-- Scripts -->
-<script src="assets/js/main.js"></script>
+<script src="static/js/main.js"></script>
 
 </body>
 </html>
