--- a/templates/index3.html
+++ b/templates/index3.html
@@ -11,8 +11,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="static/css/main.css" />
+
 </head>
-<body class="is-preload">
+<body class="is-preload" background="static/bg03.jpg">
 
 <!-- Header -->
 <header id="header">
@@ -21,7 +22,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 </header>
 
 <form action="{{url_for('process')}}" method="post" enctype="multipart/form-data">
-    <label for="fileInput">파일 선택:</label>
+
     <input type="file" name="file" id="fileInput" accept=".txt, .pdf, .docx, .py, .log"> <!-- 허용하는 파일 형식을 지정할 수 있음 -->
 
     <br>
